--- a/Fitness.Blazor/Fitness.Blazor/Components/Layout/NavMenu.razor
+++ b/Fitness.Blazor/Fitness.Blazor/Components/Layout/NavMenu.razor
@@ -26,6 +26,37 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="workout">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Workout
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fitnessTracking">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> FitnessTracking
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="goals">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Goals
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="progress">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Progress
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="achievement">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Achievement
+
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
