Blazor Pages added

--- a/Fitness.Blazor/Fitness.Blazor/Components/Pages/Home.razor
+++ b/Fitness.Blazor/Fitness.Blazor/Components/Pages/Home.razor
@@ -41,5 +41,24 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
+        
+        
     </div>
+
+    <button type="button" class="btn btn-welcome">
+        <NavLink class="nav-link" href="welcome">
+            <span aria-hidden="true"></span> Welcome
+        </NavLink>
+    </button> 
+    <button type="button" class="btn btn-sign-up">
+        <NavLink class="nav-link" href="signUp">
+            <span aria-hidden="true"></span> Sign UP
+        </NavLink>
+    </button>
+    
+    <button type="button" class="btn btn-sign-up">
+        <NavLink class="nav-link" href="fitnessProfile">
+            <span aria-hidden="true"></span> Fitness Profile
+        </NavLink>
+    </button>
 </section>
