--- a/Fitness.Blazor/Fitness.Blazor/Components/Pages/Home.razor
+++ b/Fitness.Blazor/Fitness.Blazor/Components/Pages/Home.razor
@@ -1,64 +1,87 @@
 ﻿@page "/"
-
 <PageTitle>Home</PageTitle>
-
-<h1>Welcome, Jesse😃!</h1>
-<section class="w-full">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+@*Main Body*@
+<div class="bg-success text-white min">
+    @* Top section with logo *@
+    <div class="container mt-4">
+        <div class="d-flex align-items-center">
+            <div class="me-3">
+                <img src="beFit.png" alt="Fitness Logo" class="logo-img rounded-circle">
+            </div>
+            <div class="flex-grow-1 text-center">
+                <h1 class="display-4">Get Fit, Get Healthy!</h1>
+            </div>
+        </div>
+    </div>
+    @* First Section *@
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner ">
+        <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./image.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
+                <img src="top1.jpg" class="d-block w-100" alt="Fitness Image 1">
             </div>
             <div class="carousel-item">
-                <img src="./favicon.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
+                <img src="top2.jpg" class="d-block w-100" alt="Fitness Image 2">
             </div>
             <div class="carousel-item">
-                <img src="./image.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
+                <img src="top3.jpg" class="d-block w-100" alt="Fitness Image 3">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-        
-        
     </div>
-
-    <button type="button" class="btn btn-welcome">
-        <NavLink class="nav-link" href="welcome">
-            <span aria-hidden="true"></span> Welcome
-        </NavLink>
-    </button> 
     <button type="button" class="btn btn-sign-up">
         <NavLink class="nav-link" href="signUp">
             <span aria-hidden="true"></span> Sign UP
         </NavLink>
     </button>
-    
+    @* second section *@
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-4 mb-4" v-for="workout in workouts">
+                <div class="card">
+                    <img src="fit1.jpg" class="card-img-top" alt="Workout Image 1">
+                    <div class="card-body">
+                        <p class="card-text">The body achieves what the mind believes ...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4" v-for="workout in workouts">
+                <div class="card">
+                    <img src="fit2.jpg" class="card-img-top" alt="Workout Image 2">
+                    <div class="card-body">
+                        <p class="card-text">Push harder than yesterday if you want a different...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4" v-for="workout in workouts">
+                <div class="card">
+                    <img src="fit3.jpg" class="card-img-top" alt="Workout Image 3">
+                    <div class="card-body">
+                        <p class="card-text">The secret of getting ahead is getting started ...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button type="button" class="btn btn-welcome">
+        <NavLink class="nav-link" href="welcome">
+            <span aria-hidden="true"></span> Welcome
+        </NavLink>
+    </button>
     <button type="button" class="btn btn-sign-up">
         <NavLink class="nav-link" href="fitnessProfile">
             <span aria-hidden="true"></span> Fitness Profile
         </NavLink>
     </button>
-</section>
+</div>
