--- a/Fitness.Blazor/Fitness.Blazor.Client/Pages/SignUp.razor
+++ b/Fitness.Blazor/Fitness.Blazor.Client/Pages/SignUp.razor
@@ -26,7 +26,7 @@
                 Sign
                 Up
             </button>
-            <p style="color:white">Already have an account? <span style="color:cornflowerblue;" href="/">Log in</span></p>
+            <p style="color:white">Already have an account? <span style="color:cornflowerblue;" href="login">LogIn</span></p>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
