--- a/Fitness.Blazor/Fitness.Blazor/Components/Pages/Home.razor
+++ b/Fitness.Blazor/Fitness.Blazor/Components/Pages/Home.razor
@@ -84,4 +84,22 @@
             <span aria-hidden="true"></span> Fitness Profile
         </NavLink>
     </button>
+    <button type="button" class="btn btn-sign-up">
+        <NavLink class="nav-link" href="login">
+            <span aria-hidden="true"></span> Login
+        </NavLink>
+    </button>
+    <button type="button" class="btn btn-sign-up">
+        <NavLink class="nav-link" href="blog">
+            <span aria-hidden="true"></span> Blog
+        </NavLink>
+    </button>
+    <button type="button" class="btn btn-sign-up">
+        <NavLink href="timer" class="nav-link">
+            <span class="oi oi-clock" aria-hidden="true"></span> Digital Clock
+        </NavLink>
+    </button>
+
+   
+
 </div>
