--- a/Fitness.Blazor/Fitness.Blazor.Client/Pages/Workout.razor
+++ b/Fitness.Blazor/Fitness.Blazor.Client/Pages/Workout.razor
@@ -1,4 +1,5 @@
 ﻿@page "/workout"
+@using FitnessJournal.Application.Dto
 @inject IWorkoutService WorkoutService
 
 @rendermode InteractiveWebAssembly
