--- a/Fitness.Blazor/Fitness.Blazor.Client/Pages/Login.razor
+++ b/Fitness.Blazor/Fitness.Blazor.Client/Pages/Login.razor
@@ -1,4 +1,7 @@
 ﻿@page "/login"
+@using Fitness.Blazor.Client.Services
+@using FitnessJournal.Application.Dto
+@inject ILoginService _loginService;
 
 <PageTitle>Login</PageTitle>
 <h3>Login</h3>
@@ -14,17 +17,37 @@
         <h4 style="font-size:40px;">Welcome Back!</h4>
         <p style="font-size:30px;">Enter Your Credentials To Continue</p>
     </div>
-    <form method="post" style="margin-top:15%;margin-bottom:5%;display:grid;display:grid;justify-items: center;">
-        <input type="email" placeholder="Your Email" style="width:30%;margin-bottom:2%; border-left:none;border-right:none;border-top:none; padding:1%;opacity:25%;" />
-        <input type="password" style="width:30%;margin-bottom:2%;border-left:none;border-right:none;border-top:none;padding:1%;opacity:25%;color: black;" placeholder="Password" />
+    <EditForm Model="loginDto"  style="margin-top:15%;margin-bottom:5%;display:grid;display:grid;justify-items: center;">
+        <InputText id="email" @bind-Value="loginDto.Email" type="email" placeholder="Your Email" style="width:30%;margin-bottom:2%; border-left:none;border-right:none;border-top:none; padding:1%;opacity:25%;" />
+        <InputText id="password" @bind-Value="loginDto.Password" type="password" style="width:30%;margin-bottom:2%;border-left:none;border-right:none;border-top:none;padding:1%;opacity:25%;color: black;" placeholder="Password" />
         <div style="margin-bottom:2%; display: flex; justify-content: space-between; width:30%;padding:2px;">
             <input type="radio" />
             <span clas>Forgot Password?</span>
         </div>
-        <button style="padding:1%;width:30%;border-radius:15px;background-color: rgb(194, 94, 111);color: white; font-weight: bold;">Login</button>
-    </form>
+        <button type="submit" style="padding:1%;width:30%;border-radius:15px;background-color: rgb(194, 94, 111);color: white; font-weight: bold;">Login</button>
+    </EditForm>
+
+    @if (message != null)
+    {
+        <p>@message</p>
+    }
 </main>
 
 @code {
-
+    private LoginDto loginDto = new LoginDto();
+    private string message;
+    private async Task HandleLogin()
+    {
+        var result = await _loginService.CreateLoginAsync(loginDto);
+        if (result != null)
+        {
+            message = "Successfully logged in";
+            loginDto = new LoginDto();
+        }
+        else
+        {
+            message = "Email or password is incorrect!";
+            loginDto = new LoginDto();
+        }
+    }
 }
