--- a/Fitness.Blazor/Fitness.Blazor.Client/Pages/SignUp.razor
+++ b/Fitness.Blazor/Fitness.Blazor.Client/Pages/SignUp.razor
@@ -3,7 +3,7 @@
 
 <h3>SignUp</h3>
 
-<main class="container" style="padding:30px;background-color:black;opacity:60%;">
+<main class="container" style="padding:30px;background-color:black;opacity:60%; height:100vh;width:100vw;">
     <div style="padding:2%; align-items: center; justify-items: center;">
         <h1 style="color: white; text-align:center;font-weight:bold;">Be<span style="color:cornflowerblue">Fit</span></h1>
         <p style="color: white; margin-bottom:2%;text-align:center;font-weight:bold;">Create an account</p>
