--- a/FitnessUI/FitnessUI/Components/Pages/Blogs.razor
+++ b/FitnessUI/FitnessUI/Components/Pages/Blogs.razor
@@ -9,7 +9,7 @@
         {
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="@blog.ImageUrl" class="card-img-top" alt="@blog.Title">
+                    <img src="Exec (1).gif" class="card-img-top" alt="@blog.Title">
                     <div class="card-body">
                         <h5 class="card-title">@blog.Title</h5>
                         <p class="card-text">@blog.Description</p>
