--- a/FitnessUI/FitnessUI/Components/Layout/MainLayout.razor
+++ b/FitnessUI/FitnessUI/Components/Layout/MainLayout.razor
@@ -6,8 +6,16 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="top-row px-4 d-flex justify-content-between">
+            <div class="">
+                <div class="">Good Morning</div>
+                <div class="fw-bold fs-4">Welcome</div>
+            </div>
+           
+            <div class="d-flex px-5">
+                 <img src="beFit.jpg" alt="Fitness Logo" class="logo-img rounded-circle" width="50" height="50">
+                <a class="mt-3 text-decoration-none text-black" href="https://learn.microsoft.com/aspnet/core/" target="_blank">Profile</a>
+            </div>
         </div>
 
         <article class="content px-4">
