--- a/FitnessUI/FitnessUI/Components/Layout/NavMenu.razor
+++ b/FitnessUI/FitnessUI/Components/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@page "/NavManu"
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">FitnessUI</a>
     </div>
