--- a/FitnessUI/FitnessUI/Components/Pages/Home.razor
+++ b/FitnessUI/FitnessUI/Components/Pages/Home.razor
@@ -1,24 +1,8 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
 @*Main Body*@
 <div class="bg-success text-white min">
-    @* Top section with logo *@
-    <div class="container mt-4">
-        <div class="d-flex align-items-center">
-            <div class="me-3">
-                <img src="beFit.png" alt="Fitness Logo" class="logo-img rounded-circle">
-            </div>
-            <div class="flex-grow-1 text-center">
-                <h1 class="display-4">Get Fit, Get Healthy!</h1>
-            </div>
-        </div>
-    </div>
     @* First Section *@
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -28,13 +12,13 @@ Welcome to your new app.
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="top1.jpg" class="d-block w-100" alt="Fitness Image 1">
+                <img src="top1 (2).jpg" class="d-block w-100" alt="Fitness Image 1">
             </div>
             <div class="carousel-item">
-                <img src="top2.jpg" class="d-block w-100" alt="Fitness Image 2">
+                <img src="top2 (3).jpg" class="d-block w-100" alt="Fitness Image 2">
             </div>
             <div class="carousel-item">
-                <img src="top3.jpg" class="d-block w-100" alt="Fitness Image 3">
+                <img src="top2.jpg" class="d-block w-100" alt="Fitness Image 3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -56,7 +40,7 @@ Welcome to your new app.
         <div class="row">
             <div class="col-md-4 mb-4" v-for="workout in workouts">
                 <div class="card">
-                    <img src="fit1.jpg" class="card-img-top" alt="Workout Image 1">
+                    <img src="fit1 (2).jpg" class="card-img-top" alt="Workout Image 1">
                     <div class="card-body">
                         <p class="card-text">The body achieves what the mind believes ...</p>
                     </div>
@@ -64,7 +48,7 @@ Welcome to your new app.
             </div>
             <div class="col-md-4 mb-4" v-for="workout in workouts">
                 <div class="card">
-                    <img src="fit2.jpg" class="card-img-top" alt="Workout Image 2">
+                    <img src="fit2 (2).jpg" class="card-img-top" alt="Workout Image 2">
                     <div class="card-body">
                         <p class="card-text">Push harder than yesterday if you want a different...</p>
                     </div>
@@ -72,7 +56,7 @@ Welcome to your new app.
             </div>
             <div class="col-md-4 mb-4" v-for="workout in workouts">
                 <div class="card">
-                    <img src="fit3.jpg" class="card-img-top" alt="Workout Image 3">
+                    <img src="fit3 (2).jpg" class="card-img-top" alt="Workout Image 3">
                     <div class="card-body">
                         <p class="card-text">The secret of getting ahead is getting started ...</p>
                     </div>
@@ -114,5 +98,10 @@ Welcome to your new app.
 <button type="button" class="btn btn-sign-up">
     <NavLink class="nav-link" href="login">
         <span aria-hidden="true"></span> Login
+    </NavLink>
+</button>
+<button type="button" class="btn btn-sign-up">
+    <NavLink class="nav-link" href="mainHome">
+        <span aria-hidden="true"></span> MainHome
     </NavLink>
 </button>
